# binance-example

./: README.md  binance-client-howto.md  binance-client-tutorial.md
binance-client/: README.md  package-lock.json  package.json
binance-client/src/: App.tsx  api.ts  index.tsx
binance-client/src/components/: BookTickerPage.tsx
binance-client/src/components/BookTickerPage/: BookTickerPage.tsx  index.ts  types.ts
binance-server/: .gitignore  README.md  pyproject.toml
binance-server/binance_server/: __init__.py  app.py  server.py  utils.py
binance-server/binance_server/entrypoints/: start_server.py
binance-server/binance_server/resolvers/: __init__.py  book_tickers.py  common.py  kline.py  trade.py  types.py
binance-server/binance_server/schema/: __init__.py
binance-server/binance_server/schema/queries/: __init__.py  kline.py  trade.py
binance-server/binance_server/schema/subscriptions/: __init__.py  book_ticker.py  kline.py  trade.py
binance-server/binance_server/schema/types/: __init__.py  book_ticker_event.py  datetime.py  decimal.py  kline.py  kline_event.py  numeric.py  trade.py  trade_event.py
binance-server/scratch/: binance_service.py  request.http
